# dialog-agent-service-test

./: .gitignore  Dockerfile  Eval QA.ipynb  Jenkinsfile  README.md  entrypoint.sh  eval_e2e.py  eval_e2e_multi_brand_qa.py  eval_historical_convos.py  eval_qa.py  example.env  historical_convos.txt  pyproject.toml  sent-transformer-test-data.json  task_prediction_api.ipynb
config/: .env.example
dialog_agent_service/: __init__.py  app.py  app_utils.py  constants.py  das_exceptions.py  data_types.py  db.py  df_utils.py  error_log  exceptions.py  user.py
dialog_agent_service/actions/: cart_actions.py  order_summary_actions.py
dialog_agent_service/conversational_agent/: chatgpt.py  cli.py  conversation.py  conversation_parser.py  conversation_utils.py  infer.py  resolve_cart.py  response.py
dialog_agent_service/demo/: under_luna_demo.py  under_luna_demo_utils.py
dialog_agent_service/retrievers/: merchant_retriever.py  product_retriever.py
dialog_agent_service/search/: SemanticSearch.py
dialog_agent_service/utils/: cart_utils.py  utils.py
multi_task/: infer.py  multi_vendor_data_loader.py  train.py  train.sh  train_seq2seq.py
multi_task/data_readers/: data_reader.py  dialogue_reader.py  dst_reader.py  unsupervised_mlm_data_reader.py
multi_task/datasets/: dialogue_dataset.py  dst_dataset.py
scripts/: explore_product_data.py  metafield_config.json
simulator/: conversation.py
test_data/: products_variants_prices.json  task_descriptions.txt
test_data/AAVRANI/: fact_sheet.txt  fact_sheet_qa.txt  fact_sheet_recommend.txt
tests/integration/: conftest.py  (+9 more)
(+35 files in other folders)
