[tool.poetry]
name = "dialog-agent-service"
version = "0.1.0"
description = "integration service for dialog agents (DF or otherwise)"
authors = ["Xi Chen <chen-xi@wizard.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = {version = "^2.2.2", extras = ["async"]}
pymongo = {version = "^4.3.3", extras = ["srv"]}
mysql-connector-python = "^8.0.31"
requests = "^2.28.1"
python-json-logger = "^2.0.4"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
google-cloud-dialogflow = "^2.16.1"
blinker = "^1.5"
flask-dance = "^6.2.0"
flask-login = "^0.6.2"
oauthlib = "^3.2.2"
google-cloud-aiplatform = "^1.22.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
pytest-mock = "^3.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
